# tick-machine

./: Cargo.toml  README.md
benches/: compare.rs
src/: lib.rs
