[package]
name = "tick-machine"
version = "0.2.0"
edition = "2021"
author = "Bruce0203 <brucefreedy@gmail.com>"
description = "tick calculator"
repository = "https://github.com/Bruce0203/tick-machine"
license = "MIT"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dev-dependencies]
divan = "0.1.14"


[[bench]]
name = "compare"
harness = false


[profile.bench]
lto = true
